[package]
name= "gui_rust"
version= "0.1.0"
edition="2021"

[dependencies]
minifb="0.27"

[profile.release]
opt-level = "z"
lto=true
codegen-units = 1
panic="abort"

[package.metadata.bundle]
name= "BlackScreen"
identifier = "com.gunash.blackscreen"
icon =[]
version = "0.1.0"
category="Utility"
short_description= "A lightweight black screen GUI"
